2010-01-11  Andoni Morales Alastruey  <amorales@flumotion.com>

	* Makefile.am:
	Add intl templates to the dist package
	* flumotion-fragmentedstreaming.spec.in:
	Fix requirements and versions numbers

2010-01-11  Andoni Morales Alastruey  <amorales@flumotion.com>

	* autoregen.sh (deleted):
	Delete autogenerated file
	* Makefile.am:
	* autogen.sh:
	* configure.ac:
	* intltool-extract.in:
	* intltool-merge.in:
	* intltool-update.in:
	* po/LINGUAS:
	* po/Makefile.in.in:
	* po/Makevars:
	* po/POTFILES.in:
	* po/es.po:
	* m4 (added):
	* intltool-extract.in (added):
	* intltool-update.in (added):
	* intltool-merge.in (added):
	* po (added):
	* po/LINGUAS (added):
	* po/es.po (added):
	* po/Makefile.in.in (added):
	* po/Makevars (added):
	* po/POTFILES.in (added):
	Added i18n support

2010-01-11  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/test/Makefile.am:
	* flumotion/test/common.py:
	* flumotion/test/setup.py.in:
	* flumotion/test/common.py (added):
	* flumotion/test/setup.py.in (added):
	Added missing files

2010-01-11  Andoni Morales Alastruey  <amorales@flumotion.com>

	* Makefile.am:
	Fix component name

2010-01-11  Andoni Morales Alastruey  <amorales@flumotion.com>

	* configure.ac:
	Remove tar filenames max lenght limitation

2010-01-11  Andoni Morales Alastruey  <amorales@flumotion.com>

	*  (svn:ignore):
	* flumotion/component/consumers/applestreamer (svn:ignore):
	* flumotion/test (svn:ignore):
	* flumotion/component/consumers (svn:ignore):
	* flumotion/project (svn:ignore):
	* flumotion (svn:ignore):
	* flumotion/component/muxers (svn:ignore):
	* flumotion/component (svn:ignore):
	* flumotion/component/muxers/mpegts (svn:ignore):
	Add svn ignores
	* autoregen.sh (added):
	* INSTALL (added):
	Add missing dist files
	* configure.ac:
	Fix version number and configure warnings

2010-01-08  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/component/consumers/applestreamer/resources.py:
	Increase session timeout to 30 seconds
